@@ -298,6 +298,7 @@ if(NOT WIN32)
     qt4_add_dbus_adaptor(CANTATA_SRCS dbus/org.kde.cantata.xml gui/mainwindow.h MainWindow)
     if (NOT ENABLE_KDE_SUPPORT)
         qt4_add_dbus_interfaces(CANTATA_SRCS dbus/org.freedesktop.Notifications.xml)
+        qt4_add_dbus_interfaces(CANTATA_SRCS dbus/org.freedesktop.UPower.xml)
     endif (NOT ENABLE_KDE_SUPPORT)
     qt4_add_dbus_interfaces(CANTATA_SRCS dbus/org.gnome.SettingsDaemon.MediaKeys.xml)
 endif(NOT WIN32)
